name:                language-ruby
version:             0.1.0.0
synopsis:            Ruby toolkit written in Haskell
description:         Ruby toolkit written in Haskell
homepage:            https://github.com/agrafix/language-ruby#readme
license:             MIT
license-file:        LICENSE
author:              Alexander Thiemann
maintainer:          mail@athiemann.net
copyright:           2017 Alexander Thiemann <mail@athiemann.net>
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Ruby.Parser.AST
                     , Language.Ruby.Parser.Parser
                     , Language.Ruby.Interpreter.Eval
  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 6.2
                     , text
                     , containers >= 0.5
                     , unordered-containers >= 0.2
                     , hashable >= 1.2
                     , mtl >= 2.2
                     , transformers >= 0.5
  default-language:    Haskell2010
  ghc-options:       -Wall

test-suite language-ruby-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , language-ruby
                     , hspec
                     , directory
                     , filepath
                     , text
                     , process
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/agrafix/language-ruby
